# aiko-stm32f10x-firmware

./: .gitignore  CMakeLists.txt  README.md
config/: compiler.cmake  config.cmake
source/: inner.c  stm32f10x_gpio.c
